force-app/main/default/objects/Accumulation__c/Accumulation__c.object-meta.xml
<CustomObject>
    <label>Accumulation</label>
    <nameField>
        <displayFormat>ACM-{00000000}</displayFormat>
        <label>Accumulation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accumulations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>