force-app/main/default/objects/Accumulation__c/fields/As_Per_Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>As_Per_Inception_Date__c</fullName>
    <label>As Per Inception Date</label>
    <type>DateTime</type>
</CustomField>