force-app/main/default/objects/Accumulation__c/fields/Business_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Code__c</fullName>
    <label>Business Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>