force-app/main/default/objects/Accumulation__c/fields/Endorse_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Endorse_Effective_Date__c</fullName>
    <label>Endorse Effective Date</label>
    <type>Date</type>
</CustomField>