force-app/main/default/objects/Accumulation__c/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <label>Group ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>