force-app/main/default/objects/Accumulation__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Accumulations</relationshipLabel>
    <relationshipName>Accumulations</relationshipName>
    <type>Lookup</type>
</CustomField>