force-app/main/default/objects/Accumulation__c/fields/json_accumulation__c.field-meta.xml
<CustomField>
    <fullName>json_accumulation__c</fullName>
    <label>json accumulation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>