force-app/main/default/objects/Accumulation__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <label>Request Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>