force-app/main/default/objects/Accumulation__c/fields/Risk_ID__c.field-meta.xml
<CustomField>
    <fullName>Risk_ID__c</fullName>
    <label>Risk ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>